# clic

./: CITATION.cff  LICENSE  README.md  preprocess.py  pyproject.toml
example/: clic_10px_test.h5  clic_10px_val.h5  clic_12px_test.h5  clic_12px_val.h5  clic_6px_test.h5  clic_6px_train.h5  clic_6px_val.h5  clic_8px_test.h5  clic_8px_train.h5  clic_8px_val.h5
src/clic/: downloader.py  loader.py  paths.py  preprocess.py  utils.py
