[project]
name = "clic"
version = "0.1.0"
description = "Download and Preprocess the CLIC dataset"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.11",
    "numpy>=2.0.0",
    "tqdm>4.0.0",
    "wget>=3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true